# ffts

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bootstrap  build_android.sh  build_iphone.sh  config.h  config.h.in  configure  configure.ac  ffts.pc.cmake.in  fftsConfig.cmake.in  iphone.sh  libtool
cmake/: FFTSConfig.cmake.in  ffts.pc.cmake.in
include/: ffts.h
java/: Makefile.in
java/android/jni/: Android.mk
java/jni/: ffts_jni.c
java/src/nz/ac/waikato/ffts/: FFTS.java
src/: Makefile.am  Makefile.in  arch_codegen.h  codegen.c  codegen.h  codegen_arm.h  codegen_neon.h  codegen_sse.h  cp_sse.c  cp_sse.h  ffts.c  ffts.h  ffts_attributes.h  ffts_dd.h  ffts_internal.h  ffts_nd.c  ffts_nd.h  ffts_real.c  ffts_real.h  ffts_real_nd.c  ffts_real_nd.h  ffts_small.c  ffts_small.h  ffts_static.c  ffts_static.h  ffts_transpose.c  ffts_trig.c  ffts_trig.h  macros-alpha.h  macros-altivec.h  macros-neon.h  macros-sse.h  macros.h  neon.h  neon.s  neon_float.h  neon_static.s  neon_static_f.s  neon_static_i.s  patterns.c  (+8 more)
src/arch/: neon.c  sse.c
src/arch/x64/: x64-codegen.h
src/arch/x86/: x86-codegen.h
tests/: Makefile.am  Makefile.in  test.c
x64/: x64-codegen.h
x86/: x86-codegen.h
